Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25702

InnoDB: Failing assertion: rec_offs_nth_extern(offsets, n) for background thread while optimizing table with FULLTEXT index

    XMLWordPrintable

Details

    Description

      The following assertion failure (and many similar crashes) noted while mysqlcheck -o is executed against InnoDB tables with FULLTEXT indexes:

      2021-05-15 04:16:48 0x7feffbcff700 InnoDB: Assertion failure in file /home/jenkins/workspace/MariaDBE-Custom-RPM/label/rhel-8/padding_for_CPACK_RPM_BUILD_SOURCE_DIRS_PREFIX_ON_ES_BACKUP_DEBUGSOURCE/storage/innobase/btr/btr0cur.cc line 6897
      InnoDB: Failing assertion: rec_offs_nth_extern(offsets, n)
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to https://jira.mariadb.org/
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: https://mariadb.com/kb/en/library/innodb-recovery-modes/
      InnoDB: about forcing recovery.
      210515 4:16:48 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.
       
      Server version: 10.5.9-6-MariaDB-enterprise-log
      key_buffer_size=2147483648
      read_buffer_size=131072
      max_used_connections=1
      max_threads=252
      thread_count=5
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 2651902 K bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x0 thread_stack 0x49000
      /usr/sbin/mariadbd(my_print_stacktrace+0x2e)[0x56066b2de2ae]
      /usr/sbin/mariadbd(handle_fatal_signal+0x485)[0x56066ad63ef5]
      sigaction.c:0(__restore_rt)[0x7ff1aa287b30]
      :0(__GI_raise)[0x7ff1a7e1984f]
      :0(__GI_abort)[0x7ff1a7e03c45]
      /usr/sbin/mariadbd(+0x62d86c)[0x56066aa4f86c]
      /usr/sbin/mariadbd(+0x630626)[0x56066aa52626]
      /usr/sbin/mariadbd(+0xd73d55)[0x56066b195d55]
      /usr/sbin/mariadbd(+0xd626d4)[0x56066b1846d4]
      /usr/sbin/mariadbd(+0xd64978)[0x56066b186978]
      /usr/sbin/mariadbd(+0xcb4e7b)[0x56066b0d6e7b]
      /usr/sbin/mariadbd(+0xcb501b)[0x56066b0d701b]
      /usr/sbin/mariadbd(+0xcb699c)[0x56066b0d899c]
      /usr/sbin/mariadbd(_ZN5tpool4task7executeEv+0x2b)[0x56066b270d7b]
      /usr/sbin/mariadbd(_ZN5tpool19thread_pool_generic11worker_mainEPNS_11worker_dataE+0x4f)[0x56066b26f98f]
      ??:0(std::error_code::default_error_condition() const)[0x7ff1a85e9ba3]
      pthread_create.c:0(start_thread)[0x7ff1aa27d15a]
      :0(__GI___clone)[0x7ff1a7edef73]
      The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mysqld/ contains
      information that should help you find out what is causing the crash. 
      

      In the core dump we see this thread with assertion failure:

      Thread 1 (Thread 0x7feffbcff700 (LWP 821507)):
      #0 0x00007ff1a7e1984f in raise () from /lib64/libc.so.6
      #1 0x00007ff1a7e03d0e in abort () from /lib64/libc.so.6
      #2 0x000056066aa4f86c in ut_dbg_assertion_failed (expr=expr@entry=0x56066b54b6c0 "rec_offs_nth_extern(offsets, n)",
      file=file@entry=0x56066b54b618 "/home/jenkins/workspace/MariaDBE-Custom-RPM/label/rhel-8/padding_for_CPACK_RPM_BUILD_SOURCE_DIRS_PREFIX_ON_ES_BACKUP_DEBUGSOURCE/storage/innobase/btr/btr0cur.cc",
      line=line@entry=6897) at /usr/src/debug/MariaDB-/src_0/storage/innobase/ut/ut0dbg.cc:60
      #3 0x000056066aa52626 in btr_rec_get_field_ref_offs (offsets=<optimized out>, n=<optimized out>) at /usr/src/debug/MariaDB-/src_0/storage/innobase/btr/btr0cur.cc:6897
      #4 btr_rec_get_field_ref_offs (offsets=<optimized out>, n=<optimized out>) at /usr/src/debug/MariaDB-/src_0/storage/innobase/btr/btr0cur.cc:6889
      #5 0x000056066b195d55 in btr_store_big_rec_extern_fields (pcur=pcur@entry=0x7feffbcfe170, offsets=offsets@entry=0x7ff0000463f8, big_rec_vec=big_rec_vec@entry=0x7ff0001b52c0,
      btr_mtr=btr_mtr@entry=0x7ff00000e588, op=op@entry=BTR_STORE_INSERT_BULK) at /usr/src/debug/MariaDB-/src_0/storage/innobase/btr/btr0cur.cc:7311
      #6 0x000056066b1846d4 in PageBulk::storeExt (this=this@entry=0x7ff00000e578, big_rec=big_rec@entry=0x7ff0001b52c0, offsets=offsets@entry=0x7ff0000463f8)
      at /usr/src/debug/MariaDB-/src_0/storage/innobase/btr/btr0bulk.cc:815
      #7 0x000056066b186978 in BtrBulk::insert (this=0x7fefbc117148, tuple=0x7ff000044630, level=level@entry=0) at /usr/src/debug/MariaDB-/src_0/storage/innobase/btr/btr0bulk.cc:1136
      #8 0x000056066b0d6e7b in BtrBulk::insert (tuple=<optimized out>, this=<optimized out>) at /usr/src/debug/MariaDB-/src_0/storage/innobase/include/btr0bulk.h:301
      #9 row_merge_write_fts_node (ins_ctx=0x7feffbcfe780, ins_ctx=0x7feffbcfe780, word=0x7feffbcfe760, word=0x7feffbcfe760, node=0x7ff0000ce210)
      at /usr/src/debug/MariaDB-/src_0/storage/innobase/row/row0ftsort.cc:1161
      #10 row_merge_write_fts_word (ins_ctx=0x7feffbcfe780, word=0x7feffbcfe760) at /usr/src/debug/MariaDB-/src_0/storage/innobase/row/row0ftsort.cc:1189
      #11 0x000056066b0d701b in row_fts_insert_tuple (ins_ctx=0x7feffbcfe780, word=0x7feffbcfe760, positions=0x7ff000044508, in_doc_id=0x7feffbcfe758, dtuple=0x7ff000013720)
      at /usr/src/debug/MariaDB-/src_0/storage/innobase/row/row0ftsort.cc:1282
      #12 0x000056066b0d899c in row_fts_merge_insert (index=<optimized out>, table=<optimized out>, psort_info=<optimized out>, id=<optimized out>)
      at /usr/src/debug/MariaDB-/src_0/storage/innobase/row/row0ftsort.cc:1740
      #13 0x000056066b270d7b in tpool::task::execute (this=0x7fefbc1976a0) at /usr/src/debug/MariaDB-/src_0/tpool/task.cc:52
      #14 tpool::task::execute (this=0x7fefbc1976a0) at /usr/src/debug/MariaDB-/src_0/tpool/task.cc:42
      #15 0x000056066b26f98f in tpool::thread_pool_generic::worker_main (this=0x56066c9a40f0, thread_var=0x56066c9b3d90) at /usr/src/debug/MariaDB-/src_0/tpool/tpool_generic.cc:546
      #16 0x00007ff1a85e9ba3 in execute_native_thread_routine () from /lib64/libstdc++.so.6
      #17 0x00007ff1aa27d15a in start_thread () from /lib64/libpthread.so.0
      #18 0x00007ff1a7edef73 in clone () from /lib64/libc.so.6 
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              valerii Valerii Kravchuk
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h
                  7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.