storage/innobase/row/row0ftsort.cc
@@ -1664,7 +1664,6 @@ row_fts_merge_insert(
 	aux_table = dict_table_open_on_name(aux_table_name, FALSE, FALSE,
 					    DICT_ERR_IGNORE_NONE);
 	ut_ad(aux_table != NULL);
-	dict_table_close(aux_table, FALSE, FALSE);
 	aux_index = dict_table_get_first_index(aux_table);
 
 	/* Create bulk load instance */
@@ -1789,6 +1788,8 @@ row_fts_merge_insert(
 	}
 
 exit:
+	dict_table_close(aux_table, FALSE, FALSE);
+
 	fts_sql_commit(trx);
 
 	trx->op_info = "";
